--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,7 @@ steps:
   - git fetch origin +refs/heads/generated
   - git checkout generated
   - cp -Rp dist/ generated/
+  - ls -l dist/ generated/
 
 - name: git-push
   when:
