Add path to kube-prometheus-stack config

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -7,3 +7,4 @@ grafana:
       traefik.ingress.kubernetes.io/redirect-entry-point: https
       traefik.ingress.kubernetes.io/redirect-permanent: true
     hosts: ['grafana.services.mkz.me']
+    path: /
