--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -2,9 +2,8 @@ grafana:
   ingress:
     enabled: true
     annotations:
-      kubernetes.io/ingress.class: traefik
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      traefik.ingress.kubernetes.io/redirect-entry-point: https
-      traefik.ingress.kubernetes.io/redirect-permanent: true
-    hosts: ['grafana.services.mkz.me']
-    path: /
+      kubernetes.io/ingress.class: "traefik"
+      cert-manager.io/cluster-issuer: "letsencrypt-prod"
+      traefik.ingress.kubernetes.io/redirect-entry-point: "https"
+      traefik.ingress.kubernetes.io/redirect-permanent: "true"
+    hosts: ["grafana.services.mkz.me"]
