Enabling TLS on grafana

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -7,3 +7,7 @@ grafana:
       traefik.ingress.kubernetes.io/redirect-entry-point: "https"
       traefik.ingress.kubernetes.io/redirect-permanent: "true"
     hosts: ["grafana.services.mkz.me"]
+    tls:
+    - secretName: tls-grafana-cert
+      hosts:
+      - grafana.services.mkz.me
