--- a/configs/kubernetes-dashboard.yaml
+++ b/configs/kubernetes-dashboard.yaml
@@ -1,3 +1,5 @@
+# See https://github.com/kubernetes/dashboard/blob/master/charts/helm-chart/kubernetes-dashboard/values.yaml
+
 extraArgs:
   - --enable-skip-login
   - --enable-insecure-login
@@ -9,7 +11,7 @@ ingress:
     kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/redirect-entry-point: https
-    traefik.ingress.kubernetes.io/redirect-permanent: true
+    traefik.ingress.kubernetes.io/redirect-permanent: "true"
 
   hosts:
     - kubernetes-dashboard.services.mkz.me
