--- a/configs/vault.yaml
+++ b/configs/vault.yaml
@@ -1,7 +1,27 @@
+# https://github.com/hashicorp/vault-helm/blob/main/values.yaml
+
 server:
   logLevel: "debug"
   logFormat: "standard"
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: traefik
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      traefik.ingress.kubernetes.io/redirect-entry-point: https
+      traefik.ingress.kubernetes.io/redirect-permanent: "true"
+
+    hosts:
+      - vault.services.mkz.me
+
+    tls:
+      - secretName: vault-tls
+        hosts:
+          - vault.services.mkz.me
 
 injector:
   logLevel: "debug"
   logFormat: "standard"
+
+ui:
+  enabled: true
