Fix dex chart environment

--- a/configs/dex-idp.yaml
+++ b/configs/dex-idp.yaml
@@ -1,7 +1,7 @@
 # https://github.com/dexidp/helm-charts/blob/master/charts/dex/values.yaml
 
 # The secrets to read & to put in dex pods
-envFrom:
+env:
   - name: GITEA_CLIENT_ID
     valueFrom:
       secretKeyRef:
