--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ steps:
   settings:
     local_branch: generated
     branch: generated
-    remote: ssh://git@git.mkz.me:mycroft/k8s-home.git
+    remote: ssh://git@git.mkz.me/mycroft/k8s-home.git
     force: false
     commit: true
     commit_message: Update generated configuration
