prometheus: Add a 32 GiB persistent volume

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -1,3 +1,15 @@
+prometheus:
+  prometheusSpec:
+    volumeClaimTemplate:
+      spec:
+        storageClassName: longhorn
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 32Gi
+        selector: {}
+
 grafana:
   ingress:
     enabled: true
