Fix kube-prometheus-stack storage configuration

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -1,6 +1,6 @@
 prometheus:
   prometheusSpec:
-    storage:
+    storageSpec:
       volumeClaimTemplate:
         spec:
           storageClassName: longhorn
