--- a/cdk8s.yaml
+++ b/cdk8s.yaml
@@ -2,8 +2,10 @@ language: go
 app: go run .
 imports:
   - k8s
-  - https://github.com/fluxcd/source-controller/releases/download/v0.30.0/source-controller.crds.yaml
-  - https://github.com/fluxcd/helm-controller/releases/download/v0.25.0/helm-controller.crds.yaml
+  # - https://github.com/fluxcd/source-controller/releases/download/v0.30.0/source-controller.crds.yaml
+  - https://raw.githubusercontent.com/fluxcd/source-controller/v0.30.0/config/crd/bases/source.toolkit.fluxcd.io_helmcharts.yaml
+  - https://raw.githubusercontent.com/fluxcd/source-controller/v0.30.0/config/crd/bases/source.toolkit.fluxcd.io_helmrepositories.yaml
+  # - https://github.com/fluxcd/helm-controller/releases/download/v0.25.0/helm-controller.crds.yaml
   - https://raw.githubusercontent.com/cert-manager/cert-manager/master/deploy/crds/crd-clusterissuers.yaml
   - certificates:=https://raw.githubusercontent.com/cert-manager/cert-manager/master/deploy/crds/crd-certificates.yaml
   - https://raw.githubusercontent.com/bitnami-labs/sealed-secrets/main/helm/sealed-secrets/crds/bitnami.com_sealedsecrets.yaml
@@ -13,3 +15,6 @@ imports:
   # - podmonitor:=https://raw.githubusercontent.com/prometheus-community/helm-charts/kube-prometheus-stack-41.3.1/charts/kube-prometheus-stack/crds/crd-podmonitors.yaml
   - podmonitor:=crds/crd-podmonitors.yaml
   - https://raw.githubusercontent.com/traefik/traefik/v2.9/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
+  # there is a bunch of duplicates in the following CRD:
+  # - https://raw.githubusercontent.com/zalando/postgres-operator/v1.9.0/manifests/postgresql.crd.yaml
+  - crds/postgresql.crd.yaml
