Connect Grafana to dex for authentification

--- a/configs/dex-idp.yaml
+++ b/configs/dex-idp.yaml
@@ -37,6 +37,22 @@ envVars:
       secretKeyRef:
         name: "static-admin"
         key: "user_id"
+# Grafana
+  - name: "GRAFANA_LOGIN_URL"
+    valueFrom:
+      secretKeyRef:
+        name: "grafana"
+        key: "login_url"
+  - name: "GRAFANA_CLIENT_ID"
+    valueFrom:
+      secretKeyRef:
+        name: "grafana"
+        key: "client_id"
+  - name: "GRAFANA_CLIENT_SECRET"
+    valueFrom:
+      secretKeyRef:
+        name: "stagrafanain"
+        key: "client_secret"
 
 # The configuration is now in the secret
 configSecret:
