--- a/configs/dex-config.yaml
+++ b/configs/dex-config.yaml
@@ -9,11 +9,18 @@ connectors:
   config:
     clientID: $GITEA_CLIENT_ID
     clientSecret: $GITEA_CLIENT_SECRET
-    redirectURI: https://dex.services.mkz.me/dex/callback
+    redirectURI: https://dex.services.mkz.me/callback
     baseURL: $GITEA_BASEURL
 
 storage:
   type: memory
+
+staticClients:
+- id: grafana
+  redirectURIs:
+  - $GRAFANA_LOGIN_URL
+  name: $GRAFANA_CLIENT_ID
+  secret: $GRAFANA_CLIENT_SECRET
 
 web:
   http: 0.0.0.0:5556
