--- a/configs/dex-config.yaml
+++ b/configs/dex-config.yaml
@@ -18,7 +18,7 @@ storage:
 staticClients:
 - id: grafana
   redirectURIs:
-  - {{ Env.GRAFANA_LOGIN_URL }}
+  - {{ .Env.GRAFANA_LOGIN_URL }}
   name: "{{ .Env.GRAFANA_CLIENT_ID }}"
   secret: "{{ .Env.GRAFANA_CLIENT_SECRET }}"
 
