Disable dex approval screen.

--- a/configs/dex-config.yaml
+++ b/configs/dex-config.yaml
@@ -1,6 +1,11 @@
-enablePasswordDB: true
+# See https://github.com/dexidp/dex/blob/master/examples/config-dev.yaml
+# Note: Modifying this file makes it mandatory to restart the deployment!
 
 issuer: https://dex.services.mkz.me
+
+oauth2:
+  skipApprovalScreen: true
+  alwaysShowLoginScreen: false
 
 connectors:
 - type: gitea
@@ -27,6 +32,8 @@ web:
 
 telemetry:
   http: 0.0.0.0:5558
+
+enablePasswordDB: false
 
 staticPasswords:
 - email: "{{ .Env.STATIC_ADMIN_EMAIL }}"
