--- a/configs/kubernetes-dashboard.yaml
+++ b/configs/kubernetes-dashboard.yaml
@@ -2,6 +2,9 @@
 
 extraArgs:
   - --system-banner="Welcome to Kubernetes"
+  - --enable-skip-login
+  - --disable-settings-authorizer
+  - --enable-insecure-login
 
 ingress:
   enabled: true
@@ -10,6 +13,7 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     traefik.ingress.kubernetes.io/redirect-entry-point: https
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-traefik-forward-auth@kubernetescrd
 
   hosts:
     - kubernetes-dashboard.services.mkz.me
@@ -18,3 +22,9 @@ ingress:
     - secretName: kubernetes-dashboard-tls
       hosts:
         - kubernetes-dashboard.services.mkz.me
+
+serviceMonitor:
+  enabled: true
+
+metricsScraper:
+  enabled: true
