--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -16,6 +16,22 @@ prometheus:
             requests:
               storage: 32Gi
 
+  ingress:
+    enabled: true
+    hosts:
+    - prometheus.services.mkz.me
+    tls:
+    - secretName: tls-prometheus-cert
+      hosts:
+      - prometheus.services.mkz.me
+
+    annotations:
+      kubernetes.io/ingress.class: traefik
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      traefik.ingress.kubernetes.io/redirect-entry-point: https
+      traefik.ingress.kubernetes.io/redirect-permanent: "true"
+      traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-traefik-forward-auth@kubernetescrd
+
 alertmanager:
   alertmanagerSpec:
     replicas: 2
@@ -29,6 +45,22 @@ alertmanager:
             requests:
               storage: 512Mi
 
+  ingress:
+    enabled: true
+    hosts:
+    - alertmanager.services.mkz.me
+    tls:
+    - secretName: tls-alertmanager-cert
+      hosts:
+      - alertmanager.services.mkz.me
+
+    annotations:
+      kubernetes.io/ingress.class: traefik
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      traefik.ingress.kubernetes.io/redirect-entry-point: https
+      traefik.ingress.kubernetes.io/redirect-permanent: "true"
+      traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-traefik-forward-auth@kubernetescrd
+
 grafana:
   ingress:
     enabled: true
@@ -38,7 +70,8 @@ grafana:
       traefik.ingress.kubernetes.io/redirect-entry-point: "https"
       traefik.ingress.kubernetes.io/redirect-permanent: "true"
 
-    hosts: ["grafana.services.mkz.me"]
+    hosts:
+    - grafana.services.mkz.me
     tls:
     - secretName: tls-grafana-cert
       hosts:
