kube-prometheus-stack: Send alerts to telegram

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -44,6 +44,15 @@ alertmanager:
           resources:
             requests:
               storage: 512Mi
+    # This allows expanding configuration with an "external" AlertmanagerConfig:
+    alertmanagerConfigNamespaceSelector:
+      matchLabels:
+        name: kube-prometheus-stack
+
+  # Basic configuration:
+  config:
+    global:
+      resolve_timeout: 5m
 
   ingress:
     enabled: true
