--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -48,7 +48,6 @@ alertmanager:
             requests:
               storage: 512Mi
 
-
   ingress:
     enabled: true
     hosts:
@@ -89,7 +88,7 @@ grafana:
   env:
     GF_DATABASE_TYPE: postgres
     GF_DATABASE_NAME: grafana
-    GF_DATABASE_HOST: postgres-monitoring
+    GF_DATABASE_HOST: postgres-instance.postgres
     GF_DATABASE_SSL_MODE: require
     GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
     GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: "true"
@@ -102,11 +101,11 @@ grafana:
   envValueFrom:
     GF_DATABASE_USER:
       secretKeyRef:
-        name: grafana.postgres-monitoring.credentials.postgresql.acid.zalan.do
+        name: grafana-postgres
         key: username
     GF_DATABASE_PASSWORD:
       secretKeyRef:
-        name: grafana.postgres-monitoring.credentials.postgresql.acid.zalan.do
+        name: grafana-postgres
         key: password
     GF_AUTH_GENERIC_OAUTH_CLIENT_ID:
       secretKeyRef:
