--- a/configs/minio-operator.yaml
+++ b/configs/minio-operator.yaml
@@ -17,4 +17,19 @@ operator:
           name: root
           key: password
 
+console:
+  ingress:
+    enabled: true
+    host: minio-console.services.mkz.me
+    annotations:
+      kubernetes.io/ingress.class: traefik
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      traefik.ingress.kubernetes.io/redirect-entry-point: https
+      traefik.ingress.kubernetes.io/redirect-permanent: "true"
+      traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-traefik-forward-auth@kubernetescrd
+    tls:
+      - hosts:
+        - minio-console.services.mkz.me
+        secretName: secret-tls-www
+
 # It requires some secrets. See https://github.com/minio/operator/issues/856
