Enable serviceMonitor in NATS

--- a/configs/nats.yaml
+++ b/configs/nats.yaml
@@ -13,4 +13,13 @@ nats:
       size: "10Gi"
       storageClassName: "longhorn-crypto-global"
 
+  # Enabling this requires to bump nats-boot-config to 0.9.3
+  # and to add to nodes the following label:
+  # nats.io/node-external-ip
   externalAccess: false
+
+exporter:
+  enabled: true
+  serviceMonitor:
+    enabled: true
+
