Move sealed-secrets to its own namespace

--- a/configs/sealed-secrets.yaml
+++ b/configs/sealed-secrets.yaml
@@ -1,5 +1,7 @@
 # https://github.com/bitnami-labs/sealed-secrets/blob/main/helm/sealed-secrets/values.yaml
 
+namespace: sealed-secrets
+
 metrics:
   serviceMonitor:
     enabled: true
