--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -10,7 +10,7 @@ loki:
     type: s3
     s3:
       s3: null
-      endpoint: http://minio.minio:9000
+      endpoint: http://minio-storage-hl.minio:9000
       region: null
       secretAccessKey: $MINIO_SECRET_ACCESS_KEY
       accessKeyId: $MINIO_ACCESS_KEY_ID
