--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -19,18 +19,7 @@ loki:
       http_config: {}
 
 write:
-  persistence:
-    enableStatefulSetAutoDeletePVC: false
-    size: 10Gi
-    storageClass: longhorn-crypto-global
-
-read:
-  persistence:
-    enableStatefulSetAutoDeletePVC: false
-    size: 10Gi
-    storageClass: longhorn-crypto-global
-
-env:
+  extraEnv:
   - name: MINIO_ACCESS_KEY_ID
     valueFrom:
       secretKeyRef:
@@ -41,3 +30,26 @@ env:
       secretKeyRef:
         name: minio
         key: secret_access_key
+
+  persistence:
+    enableStatefulSetAutoDeletePVC: false
+    size: 10Gi
+    storageClass: longhorn-crypto-global
+
+read:
+  extraEnv:
+  - name: MINIO_ACCESS_KEY_ID
+    valueFrom:
+      secretKeyRef:
+        name: minio
+        key: access_key_id
+  - name: MINIO_SECRET_ACCESS_KEY
+    valueFrom:
+      secretKeyRef:
+        name: minio
+        key: secret_access_key
+
+  persistence:
+    enableStatefulSetAutoDeletePVC: false
+    size: 10Gi
+    storageClass: longhorn-crypto-global
