loki: Fix extraArgs

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -20,7 +20,7 @@ loki:
 
 write:
   extraArgs:
-    config.expand-env: true
+  - config.expand-env: true
 
   extraEnv:
   - name: MINIO_ACCESS_KEY_ID
