--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -1,5 +1,6 @@
 # https://github.com/grafana/loki/blob/main/production/helm/loki/values.yaml
 loki:
+  auth_enabled: false
   commonConfig:
     replication_factor: 1
   storage:
