dex: use ssl to reach PostgreSQL

--- a/configs/dex-config.yaml
+++ b/configs/dex-config.yaml
@@ -26,7 +26,7 @@ storage:
     user: "{{ .Env.POSTGRESQL_USERNAME }}"
     password: "{{ .Env.POSTGRESQL_PASSWORD }}"
     ssl:
-      mode: disable
+      mode: require
 
 staticClients:
 - id: grafana
