--- a/configs/longhorn.yaml
+++ b/configs/longhorn.yaml
@@ -1,3 +1,5 @@
 # https://github.com/longhorn/longhorn/blob/master/chart/values.yaml
 defaultSettings:
-    defaultDataPath: /data/k3s-longhorn-storage/
+  defaultDataPath: /data/k3s-longhorn-storage/
+  backupTarget: s3://k8s-home@us-east-1/
+  backupTargetCredentialSecret: nas0-minio
