loki: Set a storageClass to backend sts

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -61,6 +61,12 @@ read:
     size: 10Gi
     storageClass: longhorn-crypto-global
 
+backend:
+  persistence:
+    enableStatefulSetAutoDeletePVC: false
+    size: 10Gi
+    storageClass: longhorn-crypto-global
+
 monitoring:
   lokiCanary:
     enabled: false
