--- a/configs/velero.yaml
+++ b/configs/velero.yaml
@@ -8,14 +8,14 @@ metrics:
     enabled: true
 
 configuration:
-  provider: aws
   backupStorageLocation:
-    default: true
-    bucket: k8s-backup
-    config:
-      region: minio
-      s3Url: "http://nas0.lan.mkz.me:9000"
-      s3ForcePathStyle: true
+    - provider: aws
+      default: true
+      bucket: k8s-backup
+      config:
+        region: minio
+        s3Url: "http://nas0.lan.mkz.me:9000"
+        s3ForcePathStyle: true
 
 credentials:
   existingSecret: nas0-minio
