--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -11,7 +11,7 @@ loki:
     type: s3
     s3:
       s3: null
-      endpoint: https://minio-storage-hl.minio:9000
+      endpoint: https://minio-storage-hl.minio.svc.cluster.local:9000
       region: null
       secretAccessKey: ${MINIO_SECRET_ACCESS_KEY}
       accessKeyId: ${MINIO_ACCESS_KEY_ID}
