prometheus: Fix local-path storageClass

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -41,7 +41,7 @@ alertmanager:
     storage:
       volumeClaimTemplate:
         spec:
-          storageClassName: localpath
+          storageClassName: local-path
           accessModes:
             - ReadWriteOnce
           resources:
