--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -9,7 +9,7 @@ prometheus:
     storageSpec:
       volumeClaimTemplate:
         spec:
-          storageClassName: local-path
+          storageClassName: longhorn
           accessModes:
             - ReadWriteOnce
           resources:
@@ -41,7 +41,7 @@ alertmanager:
     storage:
       volumeClaimTemplate:
         spec:
-          storageClassName: local-path
+          storageClassName: longhorn
           accessModes:
             - ReadWriteOnce
           resources:
